[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "oklch-aug"
version = "0.0.0"
description = "Perceptually-uniform Oklch hue-rotation pool augmentation. L-preserving by construction. numpy-core, torch optional."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "oklch-aug contributors" },
]
keywords = [
    "color",
    "oklab",
    "oklch",
    "augmentation",
    "perceptual",
    "computer-vision",
    "data-augmentation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
torch = [
    "torch>=2.1",
]
albumentations = [
    "albumentations>=1.4",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/hinanohart/oklch-aug"
Issues = "https://github.com/hinanohart/oklch-aug/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oklch_aug"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
follow_imports = "skip"
